作業計画書　変更　.gitignore 追加

--- a/作業計画書.md
+++ b/作業計画書.md
@@ -1,7 +1,8 @@
 # 作業計画書(自分用)
 
-- ハッシュを使用したファイルの変更検知　(8/7まで)
+- ハッシュを使用したファイルの変更検知　~~(8/7まで)~~
+  - ファイルの変更検知は別に実装してそれをimportする
 
-- 表示の進数表示変更 2進数、10進数、16進数。　(8/7まで)
+- 表示の進数表示変更 2進数、10進数、16進数。　~~(8/7まで)~~ ->(8/16完了)
 
-- input streamに対してstreamで送られた分の文字に色を付ける
+- input streamに対してstreamで送られた分の文字に色を付ける (8/16まで) ->
