sample file名の変更　README.mdの変更

--- a/作業計画書.md
+++ b/作業計画書.md
@@ -5,6 +5,6 @@
 
 - 表示の進数表示変更 2進数、10進数、16進数。　~~(8/7まで)~~ -> (8/16完了) ok
 
-- input streamに対してstreamで送られた分の文字に色を付ける (8/16まで) -> 
+- input streamに対してstreamで送られた分の文字に色を付ける (8/16まで) -> (8/17完了) ok
 
-  - 課題：改行に対する処理
+  - 課題：改行に対する処理 ok
